# skolegpt-instruct-dataset

./: .env.example  .gitignore  README.md  filter_dataset.py  pyproject.toml  sample_dataset.py  stratify_dataset.py  survey2instructions.ipynb  translate_dataset.py
data/: survey_questions.txt
skolegpt_instruct_dataset/: config.py  data.py  filtering.py  translate.py  utils.py
